ticketing/infra/k8s/payments-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: payments-mongo-depl 
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: payments-mongo 
  template:
    metadata:
      labels:
        app: payments-mongo 
    spec: 
      containers:
        - name:  payments-mongo 
          image: mongo
---
apiVersion: v1 
kind: Service 
metadata:
  name: payments-mongo-srv
spec: 
  selector:
    app: payments-mongo
  ports:
    - name: db 
      protocol: TCP
      port: 27017 
      targetPort: 27017
